--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ nav:
   articles: /archives/
   # projects: projects_url
   tag: /tags/
+  category: /categories/
   search: /search/
 
 # Links to your social media accounts.
