--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ nav:
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  github: http://github.com/probberechts/cactus-dark
-  twitter: /
-  facebook: /
-  linkedin: /
-  mail: mailto:name@email.com
+  github: https://github.com/tony-chenjy?tab=repositories # http://github.com/probberechts/cactus-dark
+  # twitter: /
+  # facebook: /
+  # linkedin: /
+  mail: mailto:tony.chenjy@foxmail.com
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
@@ -147,4 +147,4 @@ baidu_analytics:
 # Fill in you Gravatar user id / email if you want to use your gravatar as the
 # logo and/or favicons of you website.
 gravatar:
-  email: name@email.com
+  email: tony.chenjy@foxmail.com
